# yices2

./: .cproject  .directory  .gitignore  .gitmodules  .project  .travis.yml  DeliveredToBombardier.txt  EXISTS_FORALL.txt  FAQ.md  INSTALL  LICENSE.txt  Makefile  Makefile.build  README  README-per-thread-state.md  README.md  audit  audit-globals.sh  configure.ac  copyright.txt  gmaketest  ians-notes.txt  make.include.in
.github/workflows/: ci.yml  windows_ci.yml
.travis/: build.sh
autoconf/: alignment  check_assumptions  config.guess  os  user
bindings/: README.md
configs/: .gitignore
debian/: changelog  clean  control  copyright  libyices2.6.install  libyices2.6.install.in  libyices2.8.install  rules  yices2-dev.install  yices2-dev.install.in  yices2.manpages
doc/: COMPILING  EXISTS_FORALL.txt  GMP  LINUX  NOTES  ReleaseHowTo.txt  SMT-LIB-LANGUAGE  SOLARIS8  WINDOWS  YICES-LANGUAGE  YICES-STATUS.txt  all-sources.txt  bit_blasting.txt  bit_expr_rewrite_rules.txt  floyd-warshall-egraph-satellite-plan.md  gmp-hack.h  mingw-build  rfc20-ascii.txt  smt-grammar  smt2_parser.txt  smt2_parser_tables.h  smt_architecture.txt  smtlib.lex  smtlib.y  smtlib_grammar.ps  smtlib_lexer_in_yices.ps  table_builder.c  yices-sat.1  yices-smt.1  yices-smt2.1  yices.1  yices_keywords.txt  yices_language.y  yices_parser.txt  yices_parser_tables.h
doc/manual/: .gitignore  SRIInternational.eps  SRILogoB.eps  SRIMarkB.eps  cslreport.cls  helvetic.sty  if.tex  manual.bib  manual.tex  manual.toc  moretext.tex  prelude.tex  relative.sty  srilogo.eps  yices2-architecture.eps  yices2-architecture.fig  yices2-arith-arch.fig  yices2-aufarith-arch.fig  yices2-aufbv-arch.fig  yices2-bv-arch.fig  yices2-toplevel.eps  yices2-toplevel.fig  yices2-ufarith-arch.fig
doc/smt2/: ArraysEx.smt2  Core.smt2  Fixed_Size_BitVectors.smt2  Ints.smt2  Reals.smt2  Reals_Ints.smt2
doc/sphinx/: Makefile  cleanup-epub.sh  com.apple.ibooks.display-options.xml  (+2 more)
etc/: DONE.rtf  LICENSE  LICENSE.rtf  LICENSE.txt  NOTICES  README.cygwin  README.darwin  README.freebsd  README.linux  README.mingw  README.rtf  README.source  README.static.cygwin  README.static.darwin  README.static.freebsd  README.static.linux  README.static.mingw  README.static.sunos  README.sunos  YICES-EULA.docx  cadical-patch.txt  install-yices.darwin  install-yices.freebsd  install-yices.linux  pstdint.h
examples/: abs_axiom.smt2  abs_axiom2.smt2  abs_test1.smt2  abs_test2.smt2  abs_test3.smt2  abs_test4.smt2  abs_test5.smt2  abs_test6.smt2  arith_mix.ys  ashish-assert.txt  ashish-full.txt  ashish-full.ys  ashish-full1.tx2.txt  ashish-full1.ys  babic2-bool.ys  bool_eqs.ys  bool_eqs2.ys  bool_eqs3.ys  bool_eqs4.ys  bv_add20_bool.ys  bv_cycle.smt  bv_cycle2.smt  bv_mix.ys  bv_mul15.ys  bv_mul20.ys  bv_neg20.ys  bv_neg20_bool.ys  bv_not20.ys  bv_not4.ys  bv_pprod2.smt  bv_pprod3.smt  bv_test.c  bv_test.ys  bv_test1.ys  bv_test2.ys  check_formula_examples.c  check_formula_examples_mt.c  data1.txt  data2.txt  dioph-crt1.txt  (+149 more)
front_end/: .gitignore  Makefile  hash.c  hash.h  smt2-eval.c  smt2-lex.l  smt2-parse.y  vector.c  vector.h
lufact/: buffers.c  buffers.h  lists.h  matrices.c  matrices.h  matrix_printers.c  matrix_printers.h  matrix_types.h  test_lufact.c  test_matrices.c  vectors.c  vectors.h  vectors2.c
sat_solver/: Makefile  parameters.h  sat_solver.c  sat_solver.h  sat_solver1.c  sat_solver1.h  sat_solver10.c  sat_solver10.h  sat_solver2.c  sat_solver2.h  sat_solver3.c  sat_solver3.h  sat_solver4.c  sat_solver4.h  sat_solver5.c  sat_solver5.h  sat_solver6.c  sat_solver6.h  sat_solver7.c  sat_solver7.h  sat_solver8.c  sat_solver8.h  sat_solver9.c  sat_solver9.h  test_sat_solver.c  test_sat_solver1.c  test_sat_solver10.c  test_sat_solver2.c  test_sat_solver3.c  test_sat_solver4.c  test_sat_solver5.c  test_sat_solver6.c  test_sat_solver7.c  test_sat_solver8.c  test_sat_solver9.c
scripts/: check-globals.sh  check_mt  coverity-analyze  coverity-submit  ncheck  rewrite-kissat-kitten-symbols.sh  smt2_checks.txt
src/: .gitignore  Makefile  abstract_values.c  abstract_values.h  arena.c  arena.h  arith_atomtable.c  arith_atomtable.h  arith_buffer_terms.c  arith_buffer_terms.h  arith_buffers.c  arith_buffers.h  arith_solver_codes.c  arith_vartable.c  arith_vartable.h  arithmetic_variable_manager.c  arithmetic_variable_manager.h  assert_utils.h  attribute_values.c  attribute_values.h  backtrack_arrays.c  backtrack_arrays.h  balanced_arith_buffers.c  balanced_arith_buffers.h  beta_reduction.c  beta_reduction.h  bit_blaster.c  bit_blaster.h  bit_expr.c  bit_expr.h  bit_solver.c  bit_solver.h  bit_term_conversion.c  bit_term_conversion.h  bit_tricks.h  bitvector_variable_manager.c  bitvector_variable_manager.h  bitvectors.h  bool_vartable.c  bool_vartable.h  (+506 more)
tests/: Makefile  make_seeds.c  t0.c  test_abstract_values.c  test_ackermann_cache.c.save  test_api1.c  test_api10.c  test_api2.c  test_api3.c  test_api3_mt.c  test_api4.c  test_api4_mt.c  test_api5.c  test_api6.c  test_api6_mt.c  test_api7.c  test_api8.c  test_api9.c  test_arena.c  test_arith_buffers.c  test_arith_incompatible.c  test_assert_utils.c  test_attribute_values.c  test_binary_search.c  test_bit_blaster.c  test_bit_expr.c  test_bit_expr.c.old  test_bit_solver.c  test_bit_solver.c.old  test_bit_tricks.c  test_bitvectors.c  test_bool_sort.c  test_bool_vartable.c  test_bool_vartable.c.notready  test_booleq_table.c  test_bv64_intervals.c  test_bv64_parsing.c  test_bv_api.c  test_bv_api_mt.c  test_bv_intervals.c  (+182 more)
utils/: .gitignore  dosify  fixperm.macosx  flatten.py  gmp-hack.h  gmp_version  install.macosx  lib_name  make_source_version  mingw-build  mkreadme  mkreadme-android  postinstall  preinstall  prqa-build  remove_trailing_whitespaces  setup-vs2010  setup-vs2013  setup-vs2017  show_data.c  smt2_input_tables.h  smt2_parser.txt  smt2_parser_tables.h  smt_input_tables.h  smt_keywords.txt  smt_parser.txt  smt_parser_tables.h  table_builder.c  truth_table_compiler.c  yices2_mcsat_parallel.py  yices2_parallel.py  yices_input_tables.h  yices_parser.txt  yices_parser_tables.h  yices_version
(+3388 files in other folders)
